--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "type": "commonjs",
   "main": "common.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "git:push": "git push origin main"
   }
+  
 }
